background resize on mobile fix

--- a/src/components/ui/Background/Background.scss
+++ b/src/components/ui/Background/Background.scss
@@ -4,9 +4,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  width: 100vw;
+  height: 100vh;
   z-index: -1;
   * {
     width: 100%;
